Your commit message here

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"pdf_folder": "C:\\Users\\mallu\\Downloads\\pdfs", "image_path": "C:\\Users\\mallu\\Downloads\\pqlogo.png", "output_folder": "C:\\Users\\mallu\\Downloads\\pdfs"}
+{"pdf_folder": "C:/Users/mallu/Downloads/pdfs", "image_path": "C:/Users/mallu/Downloads/pqlogo.png", "output_folder": "C:/Users/mallu/Downloads/pdfs"}
